--- a/templates/workbooks/workbook_modals.html
+++ b/templates/workbooks/workbook_modals.html
@@ -144,7 +144,7 @@
                     <textarea class="form-control" name="description" placeholder="Add a description"></textarea>
                 </div>
                 <div class="modal-footer">
-                    <input type="submit" value="Update" class="btn btn-primary" />
+                    <input type="submit" value="Create" class="btn btn-primary" />
                     <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
                 </div>
             </form>
