Fix page not loading
Somehow this got pulled out or never checked in. Either way, this fixes the menu not displaying.

--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -1,5 +1,6 @@
 {% load staticfiles %}
 {% load cohort_filters %}
+{% load custom_tags %}
 
 <header class="navbar navbar-fixed-top site-header" role="header">
     <nav class="container">
