--- a/templates/variables/variable_edit.html
+++ b/templates/variables/variable_edit.html
@@ -27,9 +27,14 @@
             <li><a href="{% url 'variables' %}">Saved Variable Favorites</a></li>
         {% endif %}
     </ol>
+    {% csrf_token %}
     {% if workbook %}
         {# USECASE 1: ADD VAR LIST TO EXISTING WORKBOOK #}
-        <h1 class="page-header pull-left">Data Source | Variables</h1>
+        <h1 class="page-header">Data Source | Variables</h1>
+        <div class="page-action-group">
+            <button id="apply_to_worksheet" workbook_id="{{ workbook.id }}" worksheet_id="{{ worksheet.id }}" class="btn btn-primary">Apply to Worksheet : {{ workbook.name }} | {{ worksheet.name }}</button>
+            <a href="{% url 'workbook_detail' workbook.id %}" class="btn btn-link">Back to Workbook</a>
+        </div>
     {% else  %}
         {% if existing_variable_list %}
             {# USECASE 3: EDIT EXISTING VAR LIST #}
@@ -48,28 +53,23 @@
         {% else %}
             {# USECASE 4: CREATE VAR FAVORITE #}
             <h1 class="page-header pull-left">Create Variable Favorite</h1>
-            <menu class="page-action-group pull-right">
-                <menuitem class="btn btn-primary" data-toggle="modal" data-target="#create-cohort-modal">Save As Favorite</menuitem>
-                <menuitem class="btn btn-link" data-toggle="modal" data-target="#create-cohort-modal">Cancel</menuitem>
-            </menu>
+            <ul class="page-action-group pull-right">
+                <li><button class="btn btn-primary" id="create_favorite_list">Save As Favorite</button></li>
+                <li><a class="btn btn-link" href="{% url 'variables' %}">Cancel</a></li>
+            </ul>
         {% endif %}
     {% endif %}
 </div>
 {% endblock %}
 {% block content %}
+{% if workbook %}
+    {# USECASE 1: ADD VAR LIST TO EXISTING WORKBOOK #}
+
+{% else %}
     <section class="col-lg-12">
          <div class="panel form-group panel-default">
-            {% csrf_token %}
-            {% if workbook %}
-                {# USECASE 1: ADD VAR LIST TO EXISTING WORKBOOK #}
-                <div class="panel-heading"></div>
-                <div class="panel-body">
-                    <div class="page-action-group">
-                        <button id="apply_to_worksheet" workbook_id="{{ workbook.id }}" worksheet_id="{{ worksheet.id }}" class="btn btn-primary">Apply to Worksheet : {{ workbook.name }} | {{ worksheet.name }}</button>
-                        <a href="{% url 'workbook_detail' workbook.id %}" class="btn btn-link">Back to Workbook</a>
-                    </div>
-                </div>
-            {% else %}
+
+
                 {% if existing_variable_list %}
                     {# USECASE 3: EDIT EXISTING VAR LIST #}
                     <div class="panel-heading">
@@ -96,15 +96,15 @@
                     </div>
                     <div class="panel-body">
                         <input type="text" id="variable_list_name_input" placeholder="my new favorite variable list" class="form-control" value="" required>
-                        <div class="page-action-group">
-                            <button id="create_favorite_list" class="btn btn-primary">Save As Favorite</button>
-                            <a href="{% url 'variables' %}" class="btn btn-link">Cancel</a>
-                        </div>
+                        <!--<div class="page-action-group">-->
+                            <!--<button id="create_favorite_list" class="btn btn-primary">Save As Favorite</button>-->
+                            <!--<a href="{% url 'variables' %}" class="btn btn-link">Cancel</a>-->
+                        <!--</div>-->
                     </div>
                 {% endif %}
-            {% endif %}
          </div>
     </section>
+{% endif %}
     <div class="col-lg-6" id="filter-panel">
         <section class="panel panel-default">
             <div class="panel-body">
